@@ -1,5 +1,6 @@
  CNTLM - Authenticating HTTP Proxy
- Copyright (C) 2007-2010 David Kubicek
+ Copyright (C) 2007-2010 David kubicek
+ Extended AllowedHosts Functionality (C) 2020 Robert Bosch GmbH
 
  This program is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
