@@ -1,1 +1,1 @@
-0.92.3
+0.92.3-BOSCH
