@@ -27,6 +27,9 @@ integrates transparent TCP/IP port forwarding (tunneling). Each tunnel opens a n
 machine and and forwards all connections to the target host behind the parent proxy. Instead of these SSH-like
 tunnels, user can also choose a limited SOCKS5 interface.
 
+Another options is to specify a list of allowed targets  ("AllowedHosts"), thus effectively limiting the hosts that
+can be reached using this proxy.
+
 .PP
 Core \fBcntlm\fP function had been similar to the late NTLMAPS, but today, \fBcntlm\fP has evolved way beyond
 anything any other application of this type can offer. The feature list below speaks for itself. \fBCntlm\fP
@@ -241,6 +244,10 @@ and proxy address first. You can use \fB-I\fP to enter your password interactive
 Avoid parent proxy for these host names. All matching URL's will be proxied \fIdirectly\fP by \fBcntlm\fP as a
 stand-alone proxy. \fBCntlm\fP supports WWW authentication in this mode, thus allowing you to access local
 intranet sites with corporate NTLM authentication. Hopefully, you won't need that virtualized MSIE any more. :)
+
+.TP
+.B -W <pattern1>[,<patternN]\ \ \ \ (NoProxy)
+If set, the proxy will accept only request that match the provided patterns.
 
 .ne 10
 .TP
@@ -457,6 +464,10 @@ Avoid parent proxy for these host names. All matching URL's will be proxied \fId
 stand-alone proxy. \fBCntlm\fP supports WWW authentication in this mode, thus allowing you to access local
 intranet sites with corporate NTLM authentication. Hopefully, you won't need that virtualized MSIE any more. :)
 See \fB-N\fP for more.
+
+.TP
+.B AllowedHosts <pattern1>, <pattern2>, ...
+If set, allow using this proxy only for the specified host names. 
 
 .TP
 .B SOCKS5Proxy [<saddr>:]<lport>
