@@ -34,6 +34,11 @@ Proxy		10.0.0.42:8080
 #
 NoProxy		localhost, 127.0.0.*, 10.*, 192.168.*
 
+# List addresses that should be allowed to use the proxy.
+# If not set, every target host is allowed.
+# Same patterns as NoProxy supported.
+#AllowedHosts www.company.com
+
 # Specify the port cntlm will listen on
 # You can bind cntlm to specific interface by specifying
 # the appropriate IP address also in format <local_ip>:<local_port>
